--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
 
   <body>
     <header>
-      <nav class="p-4 header-color d-flex justify-content-between">
+      <nav class="p-4 header d-flex justify-content-between">
         <% if user_signed_in? %>
-          <%=link_to image_tag("rogomark.png", class:"size"), pages_top_path %>
+          <%=link_to image_tag("rogomark.png", class:"size"), pages_top_path, class:"d-flex align-items-center justify-content-start" %>
           <div class="d-flex align-items-center justify-content-center">
-            <a href="/pages/<%= current_user.id %>" class="h4 text-white mx-4">
+            <a href="/pages/<%= current_user.id %>" class="h4 text-white mx-4 text-nowrap">
               <span>こんにちは、<%= (current_user.name) %>さん</span>
             </a>
-            <div type="button" class="btn btn-light rounded-pill px-2 mx-4" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-reset font-weight-bold" %></div>
+            <div type="button" class="btn btn-light rounded-pill px-3 mx-4 text-nowrap" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-reset font-weight-bold" %></div>
 
             <div class="nav-wrapper">
               <nav class="header-nav d-flex align-items-center justify-content-center text-center h4">
