--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
  .home-image {
     position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     min-height: 300px;
     background-image: url('home.jpg');
     background-size: cover;
@@ -44,7 +44,7 @@
  .header {
    background-color: #3d3d3d;
    height: 10vh;
-   max-height: 150px;
+   max-height: 130px;
  }
 
  .size {
@@ -274,9 +274,9 @@ body.noscroll{
   filter: blur(5px);
   position: absolute;
   top: 0px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: -1;
 }
 
