--- a/app/views/mountains/index.html.erb
+++ b/app/views/mountains/index.html.erb
@@ -1,30 +1,34 @@
 <div class="search-image">
 
   <div class="d-flex align-items-center justify-content-center flex-column">
-    <div class="display-4 m-5 text-white text-shadow font-weight-bold">登る山を探しましょう！</div>
+    <div class="display-4 m-4 text-white text-shadow font-weight-bold">登る山を探しましょう！</div>
 
-    <%= search_form_for @mountains, class:"d-flex align-items-center justify-content-center text-white text-shadow h5 mb-4" do |f| %>
-      <div class="mx-5">
-        <%= f.label :name_cont, "山の名前", class:"mr-2" %>
-        <%= f.search_field :name_cont %>
+    <%= search_form_for @mountains, class:"d-flex justify-content-center flex-column text-white text-shadow h5 mb-4" do |f| %>
+      <div class="d-flex">
+        <div class="d-flex align-items-center justify-content-center flex-column mx-3">
+          <%= f.label :name_cont, "山の名前", class:"mb-3" %>
+          <%= f.search_field :name_cont %>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center flex-column mx-3">
+          <%= f.label :area_name_eq, "地域", class:"mb-3" %>
+          <%= f.collection_select :area_name_eq, @area, :name, :name, include_blank: "指定なし" %>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center flex-column mx-3">
+          <%= f.label :elevation_name_eq, "標高", class:"mb-3" %>
+          <%= f.collection_select :elevation_name_eq, @elevation, :name, :name, include_blank: "指定なし" %>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center flex-column mx-3">
+          <%= f.label :climb_time_name_eq, "総歩行時間", class:"mb-3" %>
+          <%= f.collection_select :climb_time_name_eq, @climb_time, :name, :name, include_blank: "指定なし" %>
+        </div>
       </div>
 
-      <div class="mr-5">
-        <%= f.label :area_name_eq, "地域", class:"mr-2" %>
-        <%= f.collection_select :area_name_eq, @area, :name, :name, include_blank: "指定なし" %>
+      <div class="d-flex align-items-center justify-content-center m-4">
+        <%= f.submit "検索", class:"box-shadow btn btn-light rounded-pill px-3 font-weight-bold" %>
       </div>
-
-      <div class="mr-5">
-        <%= f.label :elevation_name_eq, "標高", class:"mr-2" %>
-        <%= f.collection_select :elevation_name_eq, @elevation, :name, :name, include_blank: "指定なし" %>
-      </div>
-
-      <div class="mr-5">
-        <%= f.label :climb_time_name_eq, "総歩行時間", class:"mr-2" %>
-        <%= f.collection_select :climb_time_name_eq, @climb_time, :name, :name, include_blank: "指定なし" %>
-      </div>
-
-      <%= f.submit "検索", class:"mr-5" %>
     <% end %>
 
     <div class="text-white text-center">
