--- a/app/views/mountains/show.html.erb
+++ b/app/views/mountains/show.html.erb
@@ -11,7 +11,7 @@
 
     <h1 class="text-center text-white text-shadow m-3"><%= @mountain.name %></h1>
 
-    <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 w-75 m-3">
+    <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 m-3 mountain-result-width">
       <div class="d-flex align-items-center justify-content-center flex-column px-5">
         <div>「地域」</div>
         <div>
