--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,7 +1,7 @@
 <div class="mypage-image">
   <h1 class="roomname-bg text-shadow text-white"><%= @user.name %>さんのページ</h1>
 
-  <div class="d-flex align-items-center justify-content-center flex-column">
+  <div class="d-flex align-items-center justify-content-center flex-column h-75">
     <div class="m-4 image-shadow">
       <% if @user.image.attached? %>
         <%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"400x400^",crop:"400x400+0+0"}).processed %>
