写真投稿機能のレスポンシブデザイン

--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="tweet-image">
   <h1 class="text-white text-shadow sevenwords-bg">投稿編集ページ</h1>
 
-  <div class="d-flex align-items-center justify-content-center flex-column  m-5">
+  <div class="d-flex align-items-center justify-content-center flex-column m-5 h-75">
     <%= form_with model:@tweet, local:true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
       <div class="m-5 text-white text-shadow text-center">
         <%= f.label :image, "投稿する写真", class:"h4" %><br />
