--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,7 +1,7 @@
 <div class="tweet-image">
   <h1 class="text-white text-shadow sevenwords-bg">新規投稿ページ</h1>
 
-  <div class="d-flex align-items-center justify-content-center flex-column  m-5">
+  <div class="d-flex align-items-center justify-content-center flex-column m-5 h-75">
     <%= form_with model:@tweet, local:true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
       <%= render 'layouts/error_messages', model: f.object %>
 
