--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,7 +1,7 @@
 <div class="tweet-image">
   <h1 class="text-white text-shadow sevenwords-bg">写真詳細ページ</h1>
 
-  <div class="d-flex align-items-center justify-content-center flex-column">
+  <div class="d-flex align-items-center justify-content-center flex-column m-5 h-75">
     <div class="m-4">
       <% if @tweet.image.attached? %>
         <%= image_tag @tweet.image.variant(combine_options:{gravity: :center, resize:"400x400^",crop:"400x400+0+0"}).processed %>
