--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -2,30 +2,28 @@
 
   <h1 class="text-white text-shadow fourteenwords-bg">チャットルーム新規作成ページ</h1>
 
-  <div class="d-flex align-items-center justify-content-center m-5">
-    <div class="newchat-bg">
-      <%= form_with model: @room, local: true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
-        <%= render 'layouts/error_messages', model: f.object, class:"text-center" %>
+  <div class="d-flex align-items-center justify-content-center m-5 h-75">
+    <%= form_with model: @room, local: true, class:"d-flex align-items-center justify-content-center flex-column newchat-bg" do |f|%>
+      <%= render 'layouts/error_messages', model: f.object, class:"text-center" %>
 
-        <div class="d-flex align-items-center justify-content-center flex-column m-5">
-          <label class="text-white text-shadow h4">チャットルーム名</label>
-          <%= f.text_field :name, size:"40", placeholder: 'チャットルーム名を入力してください'%>
-        </div>
+      <div class="d-flex align-items-center justify-content-center flex-column m-5">
+        <label class="text-white text-shadow h4">チャットルーム名</label>
+        <%= f.text_field :name, size:"40", placeholder: 'チャットルーム名を入力してください'%>
+      </div>
 
-        <div class="d-flex align-items-center justify-content-center flex-column m-5">
-          <label class="text-white text-shadow h4">チャットメンバー</label>
+      <div class="d-flex align-items-center justify-content-center flex-column m-5">
+        <label class="text-white text-shadow h4">チャットメンバー</label>
 
-          <select name="room[user_ids][]" required>
-            <option value="">チャットをするユーザーを選択してください</option>
-            <% User.where.not(id: current_user.id).each do |user|%>
-              <option value = <%= user.id %>><%= user.name %></option>
-            <% end %>
-          </select>
-          <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
+        <select name="room[user_ids][]" required>
+          <option value="">チャットをするユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user|%>
+            <option value = <%= user.id %>><%= user.name %></option>
+          <% end %>
+        </select>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
 
-          <%= f.submit "作成", class:"mt-5" %>
-        </div>
-      <% end %>
-    </div>
+        <%= f.submit "作成", class:"mt-5" %>
+      </div>
+    <% end %>
   </div>
 </div>
