--- a/app/views/mountains/show.html.erb
+++ b/app/views/mountains/show.html.erb
@@ -1,35 +1,37 @@
 <div class="search-image">
 
   <div class="d-flex align-items-center justify-content-center flex-column">
-    <div class="display-4 text-center text-white text-shadow m-4">こちらの山はいかがでしょうか？</div>
+    <div class="display-4 text-center text-white text-shadow m-5">こちらの山はいかがでしょうか？</div>
 
-    <div class="d-flex align-items-center justify-content-center">
-      <% if @mountain.image.attached? %>
-        <%= image_tag @mountain.image.variant(combine_options:{gravity: :center, resize:"400x400^",crop:"400x400+0+0"}).processed %>
-      <% end %>
-    </div>
+    <div class="d-flex align-items-center justify-content-center flex-column m-5 h-100">
+      <div class="d-flex align-items-center justify-content-center">
+        <% if @mountain.image.attached? %>
+          <%= image_tag @mountain.image.variant(combine_options:{gravity: :center, resize:"400x400^",crop:"400x400+0+0"}).processed %>
+        <% end %>
+      </div>
 
-    <h1 class="text-center text-white text-shadow m-3"><%= @mountain.name %></h1>
+      <h1 class="text-center text-white text-shadow m-4"><%= @mountain.name %></h1>
 
-    <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 m-3 mountain-result-width">
-      <div class="d-flex align-items-center justify-content-center flex-column px-5">
-        <div>「地域」</div>
-        <div>
-          <%= @mountain.area.name %>
+      <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 m-4 mountain-result-width text-nowrap">
+        <div class="d-flex align-items-center justify-content-center flex-column px-5">
+          <div>「地域」</div>
+          <div>
+            <%= @mountain.area.name %>
+          </div>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center flex-column">
+          <div>「標高」</div>
+          <%= @mountain.elevation.name %>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center flex-column">
+          <div>「総歩行時間」</div>
+          <%= @mountain.climb_time.name %>
         </div>
       </div>
 
-      <div class="d-flex align-items-center justify-content-center flex-column">
-        <div>「標高」</div>
-        <%= @mountain.elevation.name %>
-      </div>
-
-      <div class="d-flex align-items-center justify-content-center flex-column">
-        <div>「総歩行時間」</div>
-        <%= @mountain.climb_time.name %>
-      </div>
+      <%= link_to "戻る", mountains_path, class:"box-shadow btn btn-light rounded-pill px-3 m-4" %>
     </div>
-
-    <%= link_to "戻る", mountains_path, class:"box-shadow btn btn-light rounded-pill px-3 m-4" %>
   </div>
 </div>
