山検索ページのデザイン変更

--- a/app/views/mountains/index.html.erb
+++ b/app/views/mountains/index.html.erb
@@ -3,7 +3,7 @@
   <div class="d-flex align-items-center justify-content-center flex-column">
     <div class="display-4 m-4 text-white text-shadow font-weight-bold">登る山を探しましょう！</div>
 
-    <%= search_form_for @mountains, class:"d-flex justify-content-center flex-column text-white text-shadow h5 mb-4" do |f| %>
+    <%= search_form_for @mountains, class:"d-flex justify-content-center flex-column text-white text-shadow h5" do |f| %>
       <div class="d-flex">
         <div class="d-flex align-items-center justify-content-center flex-column mx-3">
           <%= f.label :name_cont, "山の名前", class:"mb-3" %>
