--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -308,7 +308,7 @@ body.noscroll{
 }
 
 .toppage-scroll {
-  height: 285px;
+  min-height: 277px;
   width: 99vw;
   overflow-x: scroll;
   background-color: rgba(255, 255, 255, 0.6);
@@ -392,7 +392,7 @@ body.noscroll{
   position: fixed;
   bottom: 0;
   background-color: rgb(243, 243, 243);
-  height: calc(100vh/20);
+  height: calc(100vh/15);
   width: 100%;
   display: flex;
   align-items: center;
