--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mypage-image">
-  <h1 class="roomname-bg text-shadow text-white"><%= @user.name %>さんのプロフィール＆投稿</h1>
+  <h1 class="roomname-bg text-shadow text-white"><%= @user.name %>さんのページ・投稿</h1>
 
   <div class="d-flex align-items-center justify-content-center flex-column mypage-scroll">
     <div class="m-4 image-shadow">
