--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -22,7 +22,7 @@
 
     <div class="mypage-tweet-scroll d-flex justify-content-start align-items-center">
       <% @tweets.each do |tweet| %>
-        <% if tweet.user == current_user%>
+        <% if tweet.user == @user %>
           <div class="d-inline-block mx-3">
             <div class="d-flex justify-content-center align-items-center flex-column image-shadow">
               <% if tweet.image.attached? %>
