説明文の修正

--- a/app/views/pages/explain.html.erb
+++ b/app/views/pages/explain.html.erb
@@ -6,7 +6,7 @@
     <h5 class="mb-5">登山先を決めるのに迷った際に、使用していただきたい機能です。</h4>
 
     <%= image_tag 'top-image1.png', size:'1000x600' %>
-    <h4 class="m-3">↑トップページのボタン、サイドバーより山の検索ページへ移行します。</h4>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューより山の検索ページへ移行します。</h4>
     <%= image_tag 'search-image1.png', size:'1000x600', class:"mt-5" %>
     <h4 class="m-3">↑山の名前・地域・標高・総歩行時間を入力することで、条件に合った山を検索することができます。</h4>
     <%= image_tag 'search-image2.png', size:'1000x600', class:"mt-5" %>
@@ -18,7 +18,7 @@
     <h5 class="mb-5">登山先で撮った写真、情報共有に使っていただきたい機能です。</h5>
 
     <%= image_tag 'top-image2.png', size:'1000x600' %>
-    <h4 class="m-3">↑トップページのボタン、サイドバーより写真投稿ページへ移行します。</h4>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューより写真投稿ページへ移行します。</h4>
     <%= image_tag 'tweet-image1.png', size:'1000x600', class:"mt-5" %>
     <h4 class="m-3">↑写真の選択、タイトル、説明文を入力して完了ボタンをクリック(タップ)することで投稿が完了します。</h4>
     <%= image_tag 'tweet-image2.png', size:'1000x600', class:"mt-5" %>
@@ -30,7 +30,7 @@
     <h5 class="mb-5">一緒に登るメンバーを募ったり、特定グループでの会話に使っていただきたい機能です。</h5>
 
     <%= image_tag 'top-image3.png', size:'1000x600' %>
-    <h4 class="m-3">↑トップページのボタン、サイドバーよりチャットルーム作成ページへ移行します。</h4>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューよりチャットルーム作成ページへ移行します。</h4>
     <%= image_tag 'chat-image1.png', size:'1000x600', class:"mt-5" %>
     <h4 class="m-3">↑チャットルーム名とチャットメンバーを選択し、作成ボタンをクリック(タップ)することでチャットルームを作成します。</h4>
     <%= image_tag 'chat-image2.png', size:'1000x600', class:"mt-5" %>
@@ -42,7 +42,7 @@
     <h5 class="mb-5">参加しているチャットルームの一覧を表示する機能です。</h5>
 
     <%= image_tag 'list-image1.png', size:'1000x600' %>
-    <h4 class="m-3">↑サイドバーよりチャットルーム作成ページへ移行します。</h4>
+    <h4 class="m-3">↑ハンバーガーメニューよりチャットルーム作成ページへ移行します。</h4>
     <%= image_tag 'list-image2.png', size:'1000x600' %>
     <h4 class="m-3">↑ページでは現在参加しているルームの一覧が表示されます。</h4>
   </div>
