--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
   <div class="m-5 display-3 font-weight-bold">
-    <p>MT.BEGINNERとは？</p>
+    <p class="home-font">MT.BEGINNERとは？</p>
   </div>
 
   <div class="text-center m-5 h3">
