フォント変更

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -78,7 +78,7 @@
 }
 
 .home-font {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Noto Sans JP', sans-serif;;
 }
 /* トップページ・ハンバーガーメニュー */
  .top-image {
