--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="m-5 text-white text-shadow text-center">
-        <%= f.label :introduction, "説明文(必須)", class:"h4" %><br />
+        <%= f.label :introduction, "説明文(必須,140字以内)", class:"h4" %><br />
         <%= f.text_area :introduction, size:"100x3", class:"box-shadow" %>
       </div>
 
