--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,22 +10,22 @@
 
     <div class="m-4 text-shadow">
       <div class="field d-flex justify-content-between my-3">
-        <%= f.label :ユーザーネーム %>
+        <%= f.label :name, "ユーザーネーム" %>
         <%= f.text_field :name %>
       </div>
 
       <div class="field d-flex justify-content-between mb-3">
-        <%= f.label :メールアドレス %>
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
       <div class="field d-flex justify-content-between mb-3">
-        <%= f.label :"パスワード（6文字以上）" %>
+        <%= f.label :password, "パスワード（6文字以上）" %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
       <div class="field d-flex justify-content-between mb-3">
-        <%= f.label :パスワード（確認用） %>
+        <%= f.label :password_confirmation, "パスワード（確認用）" %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
     </div>
