--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -7,17 +7,17 @@
 
       <div class="m-5 text-white text-shadow text-center">
         <%= f.label :image, "投稿する写真", class:"h4" %><br />
-        <%= f.file_field :image, class:"text-shadow" %>
+        <%= f.file_field :image, class:"text-shadow", name:"tweet_image" %>
       </div>
 
       <div class="m-3 text-white text-shadow text-center">
         <%= f.label :title, "タイトル(必須)", class:"h4" %><br />
-        <%= f.text_field :title, class:"box-shadow", size:"50" %>
+        <%= f.text_field :title, class:"box-shadow", size:"50", name:"tweet_title" %>
       </div>
 
       <div class="m-5 text-white text-shadow text-center">
         <%= f.label :introduction, "説明文(必須)", class:"h4" %><br />
-        <%= f.text_area :introduction, size:"100x3", class:"box-shadow" %>
+        <%= f.text_area :introduction, size:"100x3", class:"box-shadow", name:"tweet_introduction" %>
       </div>
 
       <div class="mb-5 d-flex align-items-center justify-content-center">
