--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="text-white d-flex align-items-center justify-content-between">
     <h1 class="roomname-bg text-shadow"><%= @room.name %></h1>
-    <% if current_user == @room.user %>
+    <% if current_user == @room.user || current_user.admin == true %>
       <%= link_to "チャットを終了する(ルームの削除)", room_path(@room), method: :delete, data: { confirm: '本当に削除しますか?' }, class:"mr-4 btn btn-danger rounded-pill px-2 mx-4 box-shadow" %>
     <% end %>
   </div>
