管理者ページURLの再作成

--- a/app/views/mountains/new.html.erb
+++ b/app/views/mountains/new.html.erb
@@ -21,4 +21,4 @@
   <%= f.submit "投稿" %>
 <% end %>
 
-<%= link_to "戻る", "/mountains/:mountain_id/admin/mountains" %>
+<%= link_to "戻る", admin_mountains_path %>
