--- a/app/views/mountains/edit.html.erb
+++ b/app/views/mountains/edit.html.erb
@@ -18,7 +18,7 @@
   <%= f.label :elevation_id, "標高" %>
   <%= f.collection_select :elevation_id, @elevation, :id, :name, include_blank: "指定なし" %>
 
-  <%= f.label :climb_time_name, "総歩行時間" %>
+  <%= f.label :climb_time_id, "総歩行時間" %>
   <%= f.collection_select :climb_time_id, @climb_time, :id, :name, include_blank: "指定なし" %>
 
   <%= f.submit "完了" %>
