ルーム管理機能の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
                   <% if current_user.admin? %>
                     <li class="nav-item my-5"><a href="/admin/mountains" class="text-white">山検索(管理者ページ)</a></li>
                     <li class="nav-item my-5"><a href="/tweets" class="text-white">投稿管理(管理者ページ)</a></li>
+                    <li class="nav-item my-5"><a href="/rooms" class="text-white">ルーム管理(管理者ページ)</a></li>
                   <% end %>
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
                   <li class="nav-item my-5"><a href="/mountains" class="text-white">山検索</a></li>
