--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -7,14 +7,14 @@
       <%= render 'layouts/error_messages', model: f.object, class:"text-center" %>
 
       <div class="d-flex align-items-center justify-content-center flex-column m-5">
-        <label class="text-white text-shadow h4">チャットルーム名</label>
+        <%= f.label :name, "チャットルーム名", class:"text-white text-shadow h4" %>
         <%= f.text_field :name, size:"40", placeholder: 'チャットルーム名を入力してください'%>
       </div>
 
       <div class="d-flex align-items-center justify-content-center flex-column m-5">
-        <label class="text-white text-shadow h4">チャットメンバー</label>
+        <label for="user_name" class="text-white text-shadow h4">チャットメンバー</label>
 
-        <select name="room[user_ids][]" required>
+        <select id="user_name" name="room[user_ids][]" required>
           <option value="">チャットをするユーザーを選択してください</option>
           <% User.where.not(id: current_user.id).each do |user|%>
             <option value = <%= user.id %>><%= user.name %></option>
