--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -44,10 +44,8 @@
 
   <%= form_with model: [@room, @message], local: true, class:"message-field" do |f| %>
     <%= f.text_field :text, placeholder: ' 文字の入力', size:'95' %>
-    <label class="form-image px-2 py-1 m-3 rounded box-shadow">
-      <div class="text-white">画像</div>
-      <%= f.file_field :image, class:"d-none" %>
-    </label>
+    <%= f.label :image, "画像", class:"text-white form-image px-2 py-1 m-3 rounded box-shadow" %>
+    <%= f.file_field :image, class:"d-none" %>
     <%= f.submit '送信', class:"mr-5 px-2 py-1 box-shadow" %>
   <% end %>
 </div>
