--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,12 +1,12 @@
 <div class="top-image">
   <div class="d-flex align-items-start justify-content-center flex-column h-100">
     <div class="mb-3 d-flex align-items-center">
-      <h1 class="text-white text-shadow sixwords-bg">登山先の検索</h1>
+      <h1 class="text-white text-shadow sixwords-bg box-shadow">登山先の検索</h1>
       <%= link_to "山の検索ページはこちら", mountains_path, class:"btn btn-light rounded-pill px-2 mx-4 box-shadow"%>
     </div>
 
     <div class="mb-3 d-flex align-items-center">
-      <h1 class="text-white text-shadow fivewords-bg">皆様の投稿</h1>
+      <h1 class="text-white text-shadow fivewords-bg box-shadow">皆様の投稿</h1>
       <%= link_to "新規投稿はこちら",new_tweet_path, class:"btn btn-light rounded-pill px-2 mx-4 box-shadow" %>
     </div>
 
@@ -31,7 +31,7 @@
     </div>
 
     <div class="mb-3 d-flex align-items-center">
-      <h1 class="text-white text-shadow ninewords-bg">チャットルーム一覧</h1>
+      <h1 class="text-white text-shadow ninewords-bg box-shadow">チャットルーム一覧</h1>
       <%= link_to "チャットルームの作成はこちら",new_room_path, class:"btn btn-light rounded-pill px-2 mx-4 box-shadow" %>
     </div>
 
