--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,8 @@
 <h1>管理者ルーム管理ページ</h1>
 <% @rooms.each do |room| %>
-  <%= link_to room.name, room_messages_path(room.id) %>
-  <%= room.user.name %>
-  <%= link_to "削除", room_path(room.id), method: :delete, data: { confirm: "本当に削除しますか?" }, class:"ml-3 text-danger font-weight-bold" %></br>
+  <div class="d-flex">
+    <%= link_to room.name, room_messages_path(room.id) %>
+    <div class="ml-3"><%= room.user.name %></div>
+    <%= link_to "削除", room_path(room.id), method: :delete, data: { confirm: "本当に削除しますか?" }, class:"ml-3 text-danger font-weight-bold" %></br>
+  </div>
 <% end %>
