リンクの名前を変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                   <li class="nav-item my-5"><a href="/mountains" class="text-white">山検索</a></li>
                   <li class="nav-item my-5"><a href="/tweets/new" class="text-white">写真投稿</a></li>
                   <li class="nav-item my-5"><a href="/rooms/new" class="text-white">チャットルーム作成</a></li>
-                  <li class="nav-item my-5"><a href="/rooms/<%= current_user.id %>" class="text-white">チャットルーム一覧</a></li>
+                  <li class="nav-item my-5"><a href="/rooms/<%= current_user.id %>" class="text-white">参加ルーム一覧</a></li>
                 </ul>
               </nav>
             </div>
