ユーザー一覧ページのリンク作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
                     <li class="nav-item my-5"><a href="/rooms" class="text-white">ルーム管理(管理者ページ)</a></li>
                   <% end %>
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
+                  <li class="nav-item my-5"><a href="/pages/user" class="text-white">ユーザー一覧</a></li>
                   <li class="nav-item my-5"><a href="/mountains" class="text-white">山検索</a></li>
                   <li class="nav-item my-5"><a href="/tweets/new" class="text-white">写真投稿</a></li>
                   <li class="nav-item my-5"><a href="/rooms/new" class="text-white">チャットルーム作成</a></li>
