写真詳細ページのタイトル変更

--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,5 @@
 <div class="tweet-image">
-  <h1 class="text-white text-shadow sevenwords-bg">写真詳細ページ</h1>
+  <h1 class="text-white text-shadow roomname-bg"><%= @tweet.user.name %>さんの投稿詳細</h1>
 
   <div class="d-flex align-items-center justify-content-center flex-column m-5 h-75">
     <div class="m-4">
