--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,5 @@
-<h1>管理者投稿管理ページ</h1>
+<h1 class="mb-4">管理者投稿管理ページ</h1>
+
 <% @tweets.each do |tweet| %>
   <div class="d-flex">
     <%= link_to tweet.title, tweet_path(tweet.id) %>
