--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -9,6 +9,7 @@
         <%= f.label :image, "投稿する写真", class:"h4" %><br />
         <%= f.file_field :image, class:"text-shadow" %>
       </div>
+      <div id="image-list"></div>
 
       <div class="m-3 text-white text-shadow text-center">
         <%= f.label :title, "タイトル(必須)", class:"h4" %><br />
