投稿、編集画面の写真表示

--- a/app/views/mountains/edit.html.erb
+++ b/app/views/mountains/edit.html.erb
@@ -8,6 +8,7 @@
 
   <%= f.label :image, "山の写真" %><br/>
   <%= f.file_field :image %>
+  <div id="image-list"></div>
 
   <%= f.label :name, "山の名前" %>
   <%= f.text_field :name %>
