--- a/app/views/mountains/new.html.erb
+++ b/app/views/mountains/new.html.erb
@@ -4,7 +4,7 @@
   <%= render 'layouts/error_messages', model: f.object, class:"text-center" %>
 
   <%= f.label :image, "山の写真" %>
-  <%= f.file_field :image %>
+  <%= f.file_field :image, id:"js_img" %>
   <div id="image-list"></div>
 
   <%= f.label :name, "山の名前" %>
