--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -7,7 +7,7 @@
 
       <div class="m-5 text-white text-shadow text-center">
         <%= f.label :image, "投稿する写真", class:"h4"%><br />
-        <%= f.file_field :image, class:"text-shadow"%>
+        <%= f.file_field :image, class:"text-shadow", id:"js_img" %>
       </div>
       <div id="image-list"></div>
 
