表示画像サイズ調整

--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -9,7 +9,7 @@
         <%= f.label :image, "投稿する写真", class:"h4"%><br />
         <%= f.file_field :image, class:"text-shadow", id:"js_img" %>
       </div>
-      <div id="image-list"></div>
+      <div class="image-siz" id="image-list"></div>
 
       <div class="m-3 text-white text-shadow text-center">
         <%= f.label :title, "タイトル(必須)", class:"h4" %><br />
