--- a/app/views/mountains/new.html.erb
+++ b/app/views/mountains/new.html.erb
@@ -5,7 +5,7 @@
 
   <%= f.label :image, "山の写真" %>
   <%= f.file_field :image, id:"js_img" %>
-  <div id="image-list"></div>
+  <div class="image-siz" id="image-list"></div>
 
   <%= f.label :name, "山の名前" %>
   <%= f.text_field :name %>
