画像サイズ変更

--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -7,7 +7,7 @@
         <%= f.label :image, "プロフィール写真", class:"h4" %><br />
         <%= f.file_field :image, class:"text-shadow", id:"js_img" %>
       </div>
-      <div class="image-siz" id="image-list"></div>
+      <div id="image-list"></div>
       <div class="m-5 text-white text-shadow text-center">
         <%= f.label :text, "プロフィール", class:"h4" %><br />
         <%= f.text_area :text, size:"100x3", class:"box-shadow" %>
