--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,59 @@
-<div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
-  <div class="m-5 display-3 font-weight-bold">
+<div class="home-image d-flex flex-column align-items-center justify-content-center">
+  <div class="m-4 display-3 font-weight-bold text-white text-shadow">
     <p class="home-font">MT.BEGINNERとは？</p>
   </div>
 
-  <div class="text-center m-5 h3">
-    <p>もっと気軽に登山したい… そんなあなたのためのアプリ</p>
-    <p>登る山をさがしたり、一緒に登る仲間を探したり、情報を共有したり</p>
-    <p>初心者〜中級者の登山者を応援します！</p>
-  </div>
+  <div class="explain-bg d-flex flex-column align-items-center">
+    <div class="font-weight-bold text-center mt-5 h3">
+      <p>もっと気軽に登山したい… そんなあなたのためのアプリ</p>
+      <p>登る山をさがしたり、一緒に登る仲間を探したり、情報を共有したり</p>
+      <p>初心者〜中級者の登山者を応援します！</p>
+    </div>
 
-  <%= link_to "機能についての説明はこちら", pages_explain_path, class:"m-5 h5 text-white toptext-bg d-flex align-items-center justify-content-center" %>
+    <div class="m-5 display-4 font-weight-bold">機能一覧</div>
+
+    <h1 class="mt-3 font-weight-bold">山検索機能</h1>
+    <h5 class="mb-5">登山先を決めるのに迷った際に、使用していただきたい機能です。</h4>
+
+    <%= image_tag 'top-image1.png', size:'1000x600' %>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューより山の検索ページへ移行します。</h4>
+    <%= image_tag 'search-image1.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑山の名前・地域・標高・総歩行時間を入力することで、条件に合った山を検索することができます。</h4>
+    <%= image_tag 'search-image2.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑山の名前をクリック(タップ)して詳細画面へ移行します。</h4>
+    <%= image_tag 'search-image3.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="mt-3 mb-5">↑詳細画面では写真を確認できます。戻るボタンより、再び検索画面に移行します。</h4>
+
+    <h1 class="mt-5 font-weight-bold">写真投稿機能</h1>
+    <h5 class="mb-5">登山先で撮った写真、情報共有に使っていただきたい機能です。</h5>
+
+    <%= image_tag 'top-image2.png', size:'1000x600' %>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューより写真投稿ページへ移行します。</h4>
+    <%= image_tag 'tweet-image1.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑写真の選択、タイトル、説明文を入力して完了ボタンをクリック(タップ)することで投稿が完了します。</h4>
+    <%= image_tag 'tweet-image2.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑投稿した写真はトップページに表示されます。写真をクリック(タップ)することで編集・詳細画面へ移行します。</h4>
+    <%= image_tag 'tweet-image3.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="mt-3 mb-5">↑自身の投稿した写真は編集・削除を行うことができます。</h4>
+
+    <h1 class="mt-5 font-weight-bold">チャットルーム機能</h1>
+    <h5 class="mb-5">一緒に登るメンバーを募ったり、特定グループでの会話に使っていただきたい機能です。</h5>
+
+    <%= image_tag 'top-image3.png', size:'1000x600' %>
+    <h4 class="m-3">↑トップページのボタン、ハンバーガーメニューよりチャットルーム作成ページへ移行します。</h4>
+    <%= image_tag 'chat-image1.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑チャットルーム名とチャットメンバーを選択し、作成ボタンをクリック(タップ)することでチャットルームを作成します。</h4>
+    <%= image_tag 'chat-image2.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="m-3">↑作成したチャットルームはトップページに表示されます。Room nameをクリック(タップ)することで中に入れます。</h4>
+    <%= image_tag 'chat-image3.png', size:'1000x600', class:"mt-5" %>
+    <h4 class="mt-3 mb-5">↑チャットルームではメッセージ及び、写真を送ることができます。ルームメンバー以外はチャットルームに入れないようになっております。</h4>
+
+    <h1 class="mt-5 font-weight-bold">参加ルーム一覧表示機能</h1>
+    <h5 class="mb-5">参加しているチャットルームの一覧を表示する機能です。</h5>
+
+    <%= image_tag 'list-image1.png', size:'1000x600' %>
+    <h4 class="m-3">↑ハンバーガーメニューよりチャットルーム作成ページへ移行します。</h4>
+    <%= image_tag 'list-image2.png', size:'1000x600' %>
+    <h4 class="m-3">↑ページでは現在参加しているルームの一覧が表示されます。</h4>
+  </div>
 </div>
